--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header class="header">
         <img src="img/logo.png" alt="Nexter Logo" class="header__logo">
         <h3 class="heading-3">Your own home:</h3>
-        <h1 class="heading-1">The ultimate personal freedom</h1>
+        <h1 class="heading-1">The Ultimate Personal Freedom</h1>
         <button class="btn header__btn">View our properties</button>
         <div class="header__seeon-text">
             Seen on
@@ -133,7 +133,7 @@
 
     <div class="story__content">
         <h3 class="heading-3 mb-sm">Happy Customers</h3>
-        <h2 class="heading-2 heading-2--dark mb-md">&ldquo;The best decision of our lives&rdquo;</h2>
+        <h2 class="heading-2 heading-2--dark mb-md">&ldquo;The Best Decision of our lives&rdquo;</h2>
         <p class="story__text">Buying with Nexter changed our lives completely. The process was fast, professional, and
             personal. We’re thrilled with
             the results we got from them!
@@ -165,7 +165,7 @@
                     <use xlink:href="img/sprite.svg#icon-profile-male">
                     </use>
                 </svg>
-                <p>5 rooms</p>
+                <p>5 Rooms</p>
 
             </div>
 
@@ -210,7 +210,7 @@
                     <use xlink:href="img/sprite.svg#icon-profile-male">
                     </use>
                 </svg>
-                <p>6 rooms</p>
+                <p>8 Rooms</p>
 
             </div>
 
@@ -255,7 +255,7 @@
                     <use xlink:href="img/sprite.svg#icon-profile-male">
                     </use>
                 </svg>
-                <p>4 rooms</p>
+                <p>4 Rooms</p>
 
             </div>
 
@@ -300,7 +300,7 @@
                     <use xlink:href="img/sprite.svg#icon-profile-male">
                     </use>
                 </svg>
-                <p>6 rooms</p>
+                <p>6 Rooms</p>
 
             </div>
 
@@ -345,7 +345,7 @@
                     <use xlink:href="img/sprite.svg#icon-profile-male">
                     </use>
                 </svg>
-                <p>18 rooms</p>
+                <p>18 Rooms</p>
 
             </div>
 
@@ -390,7 +390,7 @@
                     <use xlink:href="img/sprite.svg#icon-profile-male">
                     </use>
                 </svg>
-                <p>3 rooms</p>
+                <p>3 Rooms</p>
 
             </div>
 
